# rust-challenges

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: CODEOWNERS
.github/workflows/: build.yml
sandbox/: Cargo.toml  README.md
sandbox/src/: main.rs
src/: lib.rs  util.rs
src/codewars/: add.rs  all_inclusive.rs  alternating_case.rs  automorphic.rs  beeramid.rs  binaries.rs  bitmove.rs  camel_case.rs  car_buyer.rs  casing.rs  cats_and_shelves.rs  coincombo.rs  count_characters.rs  deadfish.rs  diamond.rs  doubleton.rs  duplicate_words.rs  feast.rs  fib_product.rs  first_non_consecutive.rs  frequency_sort.rs  gps.rs  josephus.rs  lazy_repeater.rs  majority_element.rs  max_profit.rs  mod.rs  multiplication.rs  multiplication_table.rs  nato.rs  nearest_prime.rs  not_secure.rs  nth_power.rs  order.rs  parse_number.rs  pascal_case.rs  people_on_the_bus.rs  perimeter.rs  position_average.rs  postfix_expr.rs  (+15 more)
src/dailyprogrammer/: kth_smallest_pair.rs  letter_value_sum.rs  mod.rs
src/leetcode/: add_spaces.rs  add_two_numbers.rs  alike_halves.rs  alternating_digit_sum.rs  anagram_min_step.rs  array_from_permutations.rs  ascending_sentence.rs  auth_manager.rs  backspace_string_compare.rs  balanced_str.rs  beautiful_number.rs  best_time_to_buy_and_sell_stock.rs  best_time_to_buy_and_sell_stock_ii.rs  binary_gap.rs  binary_search.rs  binary_search_tree_iterator.rs  bitset.rs  boats_to_save_people.rs  build_an_array_with_stack_operations.rs  build_array.rs  build_array_from_permutations.rs  calculate_money_in_leetcode_bank.rs  can_jump.rs  cinema_seats.rs  (+272 more)
(+4 files in other folders)
