[package]
name = "rust-challenges"
version = "0.1.0"
authors = ["Justin Sexton <justinsexton.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.8.5"

[dev-dependencies]
test-case = "3.2.1"
