[workspace]
resolver = "2"
members = ["sandbox"]

[package]
name = "rust-challenges"
version = "0.1.0"
authors = ["Justin Sexton <justinsexton.dev@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
rand = "0.9.0"

[dev-dependencies]
test-case = "3.3.1"
